--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "amoled-github",
   "displayName": "Amoled Github",
   "description": "AMOLED Version of github's theme",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "publisher": "T3M1N4L",
   "icon": "AMOLEDGithub.png",
+  "author": {
+    "name": "T3RM1N4L",
+    "url": "https://github.com/T3M1N4L"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/T3M1N4L/AMOLED-Github"
@@ -20,7 +24,7 @@
     "black"
   ],
   "engines": {
-    "vscode": "^1.52.0"
+    "vscode": "^1.56.0"
   },
   "categories": [
     "Themes"
