--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amoled-github",
   "displayName": "Amoled Github",
   "description": "AMOLED Version of github's theme",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "T3M1N4L",
   "icon": "AMOLEDGithub.png",
   "author": {
@@ -21,7 +21,8 @@
     "dark",
     "amoled github",
     "full black",
-    "black"
+    "black",
+    "oled"
   ],
   "engines": {
     "vscode": "^1.56.0"
